crates/plotnik-tests/tests/04-emit/types/recursion/error_captured_recursive_multi_node_def.txt
A = {
  (expression_statement)
  (statement_block (A))?
}

Q = (program (A) @x)
------------------ DIAGNOSTICS -------------------
error: `@x` cannot capture `(A)` because `A` produces no result value
 --> query.ptk:6:14
  |
1 | / A = {
2 | |   (expression_statement)
3 | |   (statement_block (A))?
4 | | }
  | |_- `A` is defined here
5 |
6 |   Q = (program (A) @x)
  |                ^^^
  |
help: make `A` produce a result by changing `(expression_statement)` to `(expression_statement) @x_value` in definition `A`
help: or remove `@x` and capture a node pattern directly
